# hub75

./: .gitignore  Cargo.toml  FLASHING.md  README.md  SETUP.md
changes/archive/: 2026-04-28-hub75_readme.md  2026-04-28-shift_register_panel.md  2026-04-28-spwm_embassy_port.md  2026-04-29-panel_rendering_options.md  2026-04-29-readme_audit.md  2026-04-29-usb_display_panel_size.md  2026-04-29-usb_display_two_families.md  2026-05-01-continuous-time-compression.md  2026-05-01-rotation-and-per-core.md  2026-05-01-smooth-dot-fading.md  2026-05-01-staged-time-aggregation.md  2026-05-01-sysmon-crate-and-deb.md  2026-05-01-sysmon-example.md  2026-05-01-two-axis-dot-blur.md
changes/open/: active.md  visual-experiments.md
hub75/: Cargo.toml  README.md  memory.x
hub75/.cargo/: config.toml
hub75/examples/: shift_rainbow.rs  spwm_rainbow.rs  test_pattern.rs
hub75/src/: dp3364s.rs  lib.rs  panel.rs  shift.rs
hub75/src/dp3364s/: dma.rs  framing.rs  pack.rs  pack_worker.rs  pio.rs  scan.rs  scan_loop.rs  sio.rs  storage.rs
hub75/src/shift/: dma.rs  pack.rs  pio.rs  timing.rs
learning-examples/: Cargo.toml  ECHO_MECHANISM.md  HUB75_DP3364S_RP2350_NOTES.md  README.md  ROADMAP.md
learning-examples/.cargo/: config.toml
learning-examples/examples/: bitplane_cpu.rs  brightness_12.rs  brightness_14.rs  brightness_15.rs  echo_baseline.rs  full_spwm_pio.rs  minimal_cpu.rs  minimal_dma.rs  minimal_spwm_cpu.rs  minimal_spwm_dma.rs  minimal_spwm_pio.rs  onboard_rgb.rs  panel_reset.rs  shift_1_cpu.rs  shift_2_pio_colour.rs  shift_3_dual_pio.rs  spwm_01_cpu.rs  spwm_02_pio_data.rs  spwm_03_pio_commands.rs  spwm_04_pio_scan.rs  spwm_10_distributed_wraps.rs  spwm_11_cycles_sweep.rs  spwm_12_split_dma.rs  spwm_13_baseline_test.rs  spwm_14_no_pin_handover.rs  spwm_15_single_sm_ported.rs  spwm_16_next_steps.rs  spwm_17_combined.rs  spwm_18_next_steps.rs  spwm_19_thread_b.rs  spwm_1_cpu.rs  spwm_1_pio_cpu.rs  spwm_20_thread_b2.rs  spwm_21_rgb_drive.rs  spwm_22_rgb_ones.rs  spwm_23_unified_rgb_one.rs  spwm_24_unified_lat_idle.rs  spwm_25_no_dispatch.rs  spwm_26_unified_swap.rs  spwm_27_execctrl_swap.rs  (+16 more)
learning-examples/reference/: HUB75_DP3364S_RP2350_NOTES.md
learning-examples/reference/DP3364S/: DP3364S_Rev1.0_EN.txt  README.md
usb-display/: README.md
usb-display/client/python/: hub75_client.py  scanline_test.py
usb-display/client/rust/: Cargo.toml  run-sysmon.sh
usb-display/client/rust/.cargo/: config.toml
usb-display/client/rust/examples/: clock.rs  life.rs  sysmon_linux.rs
usb-display/client/rust/src/: lib.rs
usb-display/client/sysmon/: Cargo.toml  README.md  build.sh
usb-display/client/sysmon/debian/: postinst  postrm  sysmon.service
usb-display/client/sysmon/src/: main.rs
usb-display/firmware/: Cargo.toml  build.rs  memory.x
usb-display/firmware/src/: display.rs  main.rs
