[package]
name = "hub75"
version = "0.3.0"
edition = "2021"

[features]
# Panel selection — picks which physical panel the examples drive, and
# (once the wiring-correction work lands) cfg-gates the matching pack
# corrections for that panel.
panel-shift-64x64 = []
panel-shift-64x32 = []
panel-spwm-128x64 = []

[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.10", features = ["rp235xa", "defmt", "time-driver", "critical-section-impl", "unstable-pac"] }
embassy-sync = "0.8"
embassy-time = "0.5"
embassy-futures = "0.1"
pio = "0.3"
static_cell = "2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"

[dev-dependencies]
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
