[package]
name = "hub75-client"
version = "0.2.1"
edition = "2021"
description = "Host-side client for sending frames to a HUB75 display over USB serial"

[features]
panel-64x64 = []
panel-64x32 = []
panel-128x64 = []

[dependencies]
serialport = { version = "4", default-features = false }
chrono = "0.4"
